# type2

./: Cargo.toml  build.rs
.github/workflows/: main.yml
src/: achievements.rs  damage_system.rs  damage_system_shields.rs  dyson_sphere.rs  dyson_sphere_progressive.rs  launching.rs  main.rs  satellite_names.rs  satellite_names_advanced.rs  sound.rs
src/collision/: mod.rs
src/effects/: charging_bow.rs  gravity_viz.rs  launch_arrow.rs  mod.rs  red_star.rs  selection_glow.rs  touch_feedback.rs
src/hud/: mod.rs
src/physics/: directional_forces.rs
src/score/: mod.rs
src/screens/: gameover.rs  gameplay.rs  mod.rs
src/sun_system/: asteroids.rs  earth.rs  mod.rs  navigation_instruments.rs  thruster.rs
src/trails/: mod.rs
