[package]
name = "ldjam58"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["dev_native"]
dev = [
    # Improve error messages coming from Bevy
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    "bevy/track_location",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]

[package.metadata.bevy_cli.native.dev]
features = [ "native_dev" ]

[package.metadata.bevy_cli.web]
features = [ "dev" ]
default-features = false


[dependencies]
bevy = { version = "0.17.1", features = ["wav", "mp3"] }
bevy_framepace = "0.19.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
]}

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[lints.rust]
# Mark `bevy_lint` as a valid `cfg`, as it is set when the Bevy linter runs.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false


[profile.web]
inherits = "dev"


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.web-release]
inherits = "release"
opt-level = 3
strip = "debuginfo"
